--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -24,10 +24,13 @@
   "Auth_SignOut": "Se déconnecter",
 
   "Recipes_List": "Recettes",
+  "Recipes_Name": "Nom de la recette",
+  "Recipes_Category":"Catégorie de la recette",
   "Recipes_Ingredients": "Ingrédients",
   "Recipes_Explore": "Explorer",
   "Recipes_AddNew": "Ajouter une recette",
   "Recipes_MyRecipes": "Mes recettes",
+  "Recipes_GeneratedRecipes": "Recettes générées",
   "Recipes_Next": "Prochaines recettes",
   "Recipes_Message": "Retrouvez une liste complète de recettes basés sur vos ingrédients.",
   "Recipes_IngredientList": "Répertorier tous les ingrédients",
@@ -106,6 +109,7 @@
   "Password_MinLength": "Au moins 8 caractères",
   "Password_SpecialChar": "1 caractère spécial (ex: \\!@#\\$%\\^&\\*)",
   "Password_Strength": "Le mot de passe doit avoir au moins 8 caractères, 1 majuscule, 1 minuscule, 1 caractère spécial et 1 chiffre",
+  "Form_Title_AddRecipe":"Ajouter recette",
   "Form_FieldRequired": "Ce champ est requis",
   "Form_NoSpecialCharacters": "Les caractères spéciaux ne sont pas admis",
   "Form_MissingCriteria": "Il manque : ",
@@ -129,6 +133,13 @@
   "Label_Description": "Description",
   "Label_Location": "Emplacement",
   "Label_Type": "Type",
+  "Label_PreparationTime":"Temps de préparation",
+  "Label_CookingTime":"Temps de cuisson",
+  "Label_PreparationSteps":"Etapes de préparation",
+  "Label_TipsAndTricks":"Conseils et astuces",
+  "Label_Portions":"Portions",
+  "Label_SuggestedPairings":"Accompagnements suggérés",
+  
   "Button_Update": "Mettre à jour",
   "Button_SignIn": "Se connecter",
   "Legal_TermsOfUse": "Termes d'utilisation",
