fix bugs & improve homepage  design

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -129,6 +129,9 @@
   "Image_CancelAvatarTooltip": "Annuler l'avatar",
   "Image_RemoveAvatarTooltip": "Retirer l'avatar",
   "Image_FormText": "Types de fichiers autorisés : png, jpg, jpeg.",
+  "Image_ChangeImage": "Changer l'image",
+  "Image_CancelImage": "Annuler l'image",
+  "Image_RemoveImage": "Supprimer l'image",
   "Label_Name": "Nom",
   "Label_Description": "Description",
   "Label_Location": "Emplacement",
