--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -79,6 +79,8 @@
     "Meals_ManageWeekly": "Manage your weekly meals",
     "Meals_Plan": "Plan Meals",
     "Meals_Weekly_message": "Plan your meals for the week with an easy-to-use calendar.",
+    "Meals_Calendar": "Calendar",
+    "Meals_AddDish": "Add Dish",
 
     "ShoppingList_Main": "Shopping List",
     "ShoppingList_Message": "Create and manage your shopping list with ease.",
