--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -73,6 +73,8 @@
   "Meals_ManageWeekly": "Gérez vos repas de la semaine",
   "Meals_Plan": "Planifiez vos plâts",
   "Meals_Weekly_message": "Planifiez vos repas de la semaine avec un calendrier facile à utiliser.",
+  "Meals_Calendar": "Calendrier",
+  "Meals_AddDish": "Ajouter plât",
 
   "ShoppingList_Main": "Liste de courses",
   "ShoppingList_Message": "Créez et gérez facilement vos listes de courses.",
