--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,10 @@
     "Common_PortionNumber":"Portions Number",
     "Common_Discard": "Discard",
     "Common_Save_Changes":"Save Changes",
-    
+    "Common_Elements":"Elements",
+    "Common_Meal":"Meals",
+    "Common_Recipes":"Recipes",
+
     "SignIn_Title": "Sign In",
     "SignIn_Subtitle": "Your Social Campaigns",
     "SignIn_WithGoogle": "Sign in with Google",
